Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25006

When scaling a cosmetic pen then if the scale is small enough then it will cause the cosmetic pen to no longer have the width set

    XMLWordPrintable

Details

    • 20e2fa25bcf2562e9a6223f95538eb73a1091ece (4.8), 6eae3cec5a34fbed28e519ffd8a8f3f1cd7b5c5b (5.0)

    Description

      When scaling a cosmetic pen then if the scale is small enough then it will cause the cosmetic pen to no longer have the width set

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes