The scaling should not effect the width of a cosmetic pen

When the scaling effects the pen width so that it is less than 1 pixel
in width then it would use the QCosmeticStroker to draw, however this
should not be the case for cosmetic pens that are not less than 1 pixel
in width as the scaling does not change their width.

Task-number: QTBUG-25006
Change-Id: I142db0f3a7ee02aa87171495d5a7a7011100814e
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>

cregit: 6eae3cec5a34fbed28e519ffd8a8f3f1cd7b5c5b https://github.com/qt/qtbase/commit/6eae3cec5a34fbed28e519ffd8a8f3f1cd7b5c5b